--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+        <!-- Balises meta pour le référencement SEO -->
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <meta name="description" content="{{ company_util.company.name }}, vente de véhicules neufs ou d'occasion, entretien et réparation auto. Retrouvez l'ensemble de nos prestations et de nos véhicules à vendre.">
+        <meta property="og:title" content="Avec une expérience de plus de 30 ans le Garage Mendonça est votre spécialiste de la mécanique, la carrosserie et la vente"/>
+        <meta property="og:description" content="Le {{ company_util.company.name }} réalise la vente et l'achat de voitures. Découvrez une sélection de véhicules neufs et d'occasion disponibles à petit prix. Notre garage s'occupe également de réparer votre carrosserie. Votre voiture est tombée en panne ? Confiez-la à notre spécialiste ! Il..."/>
+        <meta property="og:type" content="website"/>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <!-- Titre du site -->
+        <title>
+            {% block title %}{{ company_util.company.name }}{% endblock %}
+        </title>
+        <!-- import d'une police spécifique Barlow-->
+        <link href="https://fonts.googleapis.com/css?family=Barlow:400,600&display=swap" rel="stylesheet"/>
+        <!-- Liaison avec le CSS-->
+        <link rel="stylesheet" href="{{ asset('css/style.css') }}"/>
+        <!-- Ajoute un favicon-->
+        <link rel="icon" href="{{ asset('img/favicon.ico') }}"/>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
+        {% block stylesheets %}{% endblock %}
+        <script src="{{ asset('js/main.js') }}" defer></script>
+        <script src="{{ asset('js/carsDetails.js') }}" defer></script>
+
+        {% block javascripts %}{% endblock %}
     </head>
     <body>
+        <header>
+            <div class="logo-container">
+                <a href="/">
+                    <img src="{{ asset('img/logo.png') | raw }}" alt="Garage V. Parrot Logo"/>
+                </a>
+            </div>
+
+            {% block navbar %}
+                <!-- Bouton du menu burger -->
+                <button class="burger-menu" onclick="toggleMenu()">☰</button>
+                <!-- Nav bar -->
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="#services" onclick="scrollToService('services')">Nos Services</a>
+                        </li>
+                        <li>
+                            <a href="#cars" onclick="scrollToService('cars')">Voitures d'Occasion</a>
+                        </li>
+                        <li>
+                            <a href="#contact-form" onclick="scrollToService('contact-form')">Contact</a>
+                        </li>
+                        {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+
+                            <li>
+                                <a href="{{ path('app_logout') }}">Se déconnecter</a>
+                            </li>
+                        {% else %}
+                            <li>
+                                <a href="{{ path('app_login') }}">Se Connecter</a>
+                            </li>
+                        {% endif %}
+
+                        {% if is_granted('ROLE_EMPLOYEE') %}
+                            <li>
+                                <a href="{{ path('admin') }}">Admin</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            {% endblock %}
+        </header>
+
         {% block body %}{% endblock %}
+
+        <footer>
+            <p>© {{ 'now'|date('Y') }} {{ company_util.company.name }}. Tous droits réservés.</p>
+            <!-- Réseaux sociaux-->
+            <section id="social-contact">
+                <h2>Contactez-Nous</h2>
+                <p>Téléphone : {{ company_util.company.phoneNumber }}<br>Email : {{ company_util.company.email }}</p>
+                <div class="social-icons">
+                    <a href="https://www.facebook.com/GarageVParrot" target="_blank" aria-label="Facebook"><img src="{{ asset('img/social/Facebook.png') | raw }}" alt="Facebook"/></a>
+                    <a href="https://www.twitter.com/GarageVParrot" target="_blank" aria-label="Twitter"><img src="{{ asset('img/social/Twitter.png') | raw }}" alt="Twitter"/></a>
+                    <a href="https://www.instagram.com/GarageVParrot" target="_blank" aria-label="Instagram"><img src="{{ asset('img/social/instagram.png') | raw }}" alt="Instagram"/></a>
+                    <a href="https://www.youtube.com/GarageVParrot" target="_blank" aria-label="Youtube"><img src="{{ asset('img/social/youtube.png') | raw }}" alt="Youtube"/></a>
+                    <a target="_blank" aria-label="Email" href="mailto:garagevparrot@gmail.com"><img src="{{ asset('img/social/mail.png') | raw }}" alt="Email"/></a>
+                </div>
+            </section>
+
+            <div class="store-hours">
+                <ul>
+                    {% for schedule in company_util.company.companySchedules %}
+                        <li>
+                            {{ schedule.day }}: {{ schedule.startMorning|date('H:i') }} - {{ schedule.endMorning|date('H:i') }}
+                            {% if schedule.startAfternoon %}
+                                || {{ schedule.startAfternoon|date('H:i') }} - {{ schedule.endAfternoon|date('H:i') }}
+                            {% endif %}
+                        </li>
+                    {% endfor %}
+                </ul>
+            </div>
+        </footer>
     </body>
 </html>
