--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,26 +3,53 @@
 {% block title %}Créer un compte{% endblock %}
 
 {% block body %}
-    <h1>Créer un compte</h1>
+    <div class="registration-form">
+        <h1>Créer un compte</h1>
 
-    {{ form_errors(registrationForm) }}
+        {{ form_errors(registrationForm) }}
 
-    <div class= "w-50 m-auto text-white">
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.firstName, {
-            label: 'Prénom'
-        }) }}
-        {{ form_row(registrationForm.lastName, {
-            label: 'Nom'
-        }) }}
-            
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Mot de passe'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        <div class="w-50 m-auto text-white">
+            {{ form_start(registrationForm) }}
+                {{ form_row(registrationForm.firstName, {
+                    'label': 'Prénom',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': 'Prénom'
+                    }
+                }) }}
+                {{ form_row(registrationForm.lastName, {
+                    'label': 'Nom',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': 'Nom'
+                    }
+                }) }}
+                {{ form_row(registrationForm.email, {
+                    'label': 'Adresse email',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': 'Adresse email'
+                    }
+                }) }}
+                {{ form_row(registrationForm.plainPassword, {
+                    'label': 'Mot de passe',
+                    'attr': {
+                        'class': 'form-control',
+                        'placeholder': 'Mot de passe'
+                    }
+                }) }}
+                {{ form_row(registrationForm.agreeTerms, {
+                    'label': 'Accepter les termes',
+                    'label_attr': {
+                        'class': 'form-check-label'
+                    },
+                    'attr': {
+                        'class': 'form-check-input'
+                    }
+                }) }}
 
-        <button type="submit" class="btn btn-primary">Enregistrer</button>
-    {{ form_end(registrationForm) }}
+                <button type="submit" class="btn btn-primary">Enregistrer</button>
+            {{ form_end(registrationForm) }}
+        </div>
     </div>
 {% endblock %}
